--- a/loginLogout/Css/Form.css
+++ b/loginLogout/Css/Form.css
@@ -8,7 +8,7 @@ body
 {
     width: 100%;
     height: 100vh;
-    background: linear-gradient(-70deg, #495a3b, #ae57c0, #504646);
+    background: linear-gradient(-45deg, #73ff00, #f7f7f7, #000000);
 }
 
 #form
@@ -21,7 +21,7 @@ body
     padding: 60px;
     width: min-content;
     align-items: center;
-    color: #2b344b;
+    color: #0048ff;
 
 }
 .title
@@ -30,11 +30,16 @@ body
     margin-bottom: 10%;
 
 }
-.form-group
+.input
 {
     min-width: 280px;
     border-radius: 5px;
-    border: 2px #000000 solid;
+    border: 2px #ce0000 solid;
     padding: 5px;
     margin: 0px 0px 12px -5px;
+}
+.input i{
+    font-size: 1.2em;
+    padding: 5px;
+    background: -webkit-linear-gradient(-45deg, #ffce51, #ff7253, #fd5754);
 }
